# ringspy

./: .coverage  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codecov.yml  joss.yml  publish.yml  tests.yml
RingsPy/: MeshGenTools.py  __init__.py  test_cube.py  test_sites.npy
RingsPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
contents/: paper.bib  paper.md
ringspy/: MeshGenTools.py  __init__.py  test_radius.npy
tests/: test_hexalattice_hex.py  test_hexalattice_tri.py  test_lloyd.py  test_read_existing_sites.py  test_wood_cube.py  test_wood_cube_precracked.py
tests/meshes/wood_cube_precracked/: wood_cube_precracked-mesh.txt  wood_cube_precracked-ridge.mesh  wood_cube_precracked-vertex.mesh  wood_cube_precrackedIGA.txt  wood_cube_precracked_beams.vtu  wood_cube_precracked_conns.vtu  wood_cube_precracked_vertices.vtu
