[metadata]
name = RingsPy
version = 0.2.0
author = Hao Yin
author_email = haoyin2022@u.northwestern.edu
description = A geometric generation tool for prismatic cellular solids
long_description = file: README.md
license = GPL-3.0
license_files = LICENSE
url = https://github.com/kingyin3613/RingsPy/
platforms = unix, linux, osx, cygwin, win32
python_requires = ">=3.6"

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Topic :: Scientific/Engineering :: Physics
	Topic :: Software Development :: Libraries
	
[options]
packages =
    RingsPy
install_requires =
    requests>=2
	numpy
	scipy
	matplotlib >= 3.2.2
	hexalattice
	vtk
setup_requires =
    requests>=2
	numpy
	scipy
	matplotlib >= 3.2.2
	hexalattice
	vtk
python_requires = >=3.6
package_dir =
    
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.package_data]
RingsPy = py.typed